# OpenCVCPP

./: .gitignore  README.md
ContourDetection/: main.cpp
DocumentScanner/: CMakeLists.txt  DocumentScanner  DocumentScanner.cpp  main.cpp  premake5.lua
DocumentScanner2/: main.cpp
DocumentScanner2/tests/: speedTest.cpp
Drawing/: CMakeLists.txt  main.cpp
FaceDetection/: main.cpp
FlattenImagePart/: main.cpp
GatherImageData/: main.cpp
LicensePlateDetector/: main.cpp
OpenCVBuiltinGUITrackbar/: CMakeLists.txt  Gui.cpp
ReadingImages/: CMakeLists.txt  main.cpp
ReadingVideos/: CMakeLists.txt  main.cpp
TileMerger/: CMakeLists.txt  main.cpp
UsingOpenCVwithPremake5/: premake5.lua  show_image.cpp
