cmake_minimum_required(VERSION 3.2)
get_filename_component(ProjectName ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project( ${ProjectName} )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ${ProjectName} ./main.cpp )
target_link_libraries( ${ProjectName} ${OpenCV_LIBS} )
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall -Wno-long-long -pedantic")